[package]
name = "tls-tunnel"
version = "0.1.0"
authors = ["neonphog <neonphog@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.12"
blake2b_simd = "0.5.10"
futures = "0.3"
nanoid = "0.3"
once_cell = "1.4"
rcgen = "0.8.5"
rustls = { version = "0.18", features = [ "dangerous_configuration" ] }
tokio = { version = "0.2", features = [ "full" ] }
webpki = "0.21.2"
